--- a/index.qmd
+++ b/index.qmd
@@ -4,16 +4,15 @@ image: assets/GJProfilePic.jpeg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/gjohl
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/gurpreetjohl
+    - icon: twitter
+      text: Twitter
+      href: https://twitter.com/gurpreetjohl
 ---
 
 Data science, AI and software projects.
