Add notes folder from ml-practice repo and reorg posts folder

--- a/posts/ml/fastai/index.qmd
+++ b/posts/ml/fastai/index.qmd
@@ -3,7 +3,7 @@ title: "Fast AI Notes"
 description: "Notes from Fast AI Practical Deep Learning for Coders Part 1"
 date: "2023-08-30"
 image: "image.jpg"
-categories: [AI, ]
+categories: [AI, Engineering]
 ---
 
 # Fast AI Part I
