--- a/posts/ml/tensorflow/tensorflow.qmd
+++ b/posts/ml/tensorflow/tensorflow.qmd
@@ -1,3 +1,11 @@
+---
+title: "Tensorflow Notes"
+description: "Notes on Tensorflow"
+date: "2023-02-23"
+categories: [AI, Engineering]
+---
+
+
 # Machine Learning Notes
 These are assorted notes on topics from various courses and projects.
 
@@ -293,7 +301,7 @@ given an input string, e.g. ['h', 'e', 'l', 'l'],
 predict the sequence shifted by one character, e.g. ['e', 'l', 'l', 'o']
 
 The embedding, GRU and dense layers work on the sequence in the following way:
-![NLP_layers.png](../_images/tensorflow/NLP_layers.png)
+![NLP Layers](NLP_layers.png){.lightbox #fig-nlp-layers}
 
 Steps:
 1. Read in text data
