--- a/posts/business/pitching/pitching.qmd
+++ b/posts/business/pitching/pitching.qmd
@@ -1,3 +1,11 @@
+---
+title: "Pitching Notes"
+description: "Notes on Pitching"
+date: "2023-08-04"
+image: pitch_anything.jpg
+categories: [Business]
+---
+
 # Pitching
 Notes from "Pitch Anything" by Oren Klaff.
 
