--- a/posts/business/public_speaking/public_speaking.qmd
+++ b/posts/business/public_speaking/public_speaking.qmd
@@ -1,3 +1,11 @@
+---
+title: "Public Speaking Notes"
+description: "Notes on Public Speaking"
+date: "2023-07-20"
+image: ted.png
+categories: [Business]
+---
+
 # Public Speaking
 Notes from reading "Ted Talks: The offical TED guide to public speaking" by Chris Anderson.
 
