--- a/posts/ml/fastai/index.qmd
+++ b/posts/ml/fastai/index.qmd
@@ -2,7 +2,7 @@
 title: "Fast AI Notes"
 description: "Notes from Fast AI Practical Deep Learning for Coders Part 1"
 date: "2023-08-30"
-image: "image.jpg"
+image: "fastai.png"
 categories: [AI, Engineering]
 ---
 
