--- a/posts/ml/fastai/lesson3/lesson.qmd
+++ b/posts/ml/fastai/lesson3/lesson.qmd
@@ -111,6 +111,6 @@ from the homework task is a worked example of manually training a multivariate l
 
 ## References
 
-- [https://course.fast.ai/Lessons/lesson3.html](https://course.fast.ai/Lessons/lesson3.html)
-- [https://www.kaggle.com/code/jhoward/which-image-models-are-best/](https://www.kaggle.com/code/jhoward/which-image-models-are-best/)
-- [https://www.kaggle.com/code/gurpreetjohl/how-does-a-neural-net-really-wor](https://www.kaggle.com/code/gurpreetjohl/how-does-a-neural-net-really-work)
+- [Course lesson page](https://course.fast.ai/Lessons/lesson3.html)
+- [Comparison of computer vision models](https://www.kaggle.com/code/jhoward/which-image-models-are-best/)
+- ["How does a neural network really work?" notebook](https://www.kaggle.com/code/gurpreetjohl/how-does-a-neural-net-really-work)
