--- a/posts/ml/fastai/lesson6/lesson.qmd
+++ b/posts/ml/fastai/lesson6/lesson.qmd
@@ -152,4 +152,6 @@ Rules of thumb on hardware:
 
 ## References
 
-- [https://www.kaggle.com/code/jhoward/the-best-vision-models-for-fine-tuning](https://www.kaggle.com/code/jhoward/the-best-vision-models-for-fine-tuning)
+- [Course lesson page](https://course.fast.ai/Lessons/lesson6.html)
+- [Comparison of computer vision models for fine-tuning](https://www.kaggle.com/code/jhoward/the-best-vision-models-for-fine-tuning)
+- [Bagging predictors](https://link.springer.com/article/10.1007/BF00058655)
