GJ-76 Fastai notes series (#2)
* WIP split fast AI course notes

* Gussy up FastAI lesson 1

* Gussy up FastAI lesson 2

* FastAI lesson 3

* Add lesson 4

* FastAi lesson 5

* Fastai lesson 6

* Update references

* Add genai series

* Render

--- a/blog.qmd
+++ b/blog.qmd
@@ -12,3 +12,14 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
+
+# Series
+#### [fastai-series](fastai-series.qmd)
+This series contains notes from following the fastai "Practical Deep Learning for Coders" course.
+See the [course page](https://course.fast.ai/) and [book](https://github.com/fastai/fastbook/tree/master).
+
+#### [generative-ai-series](gen-deep-learning-series.qmd)
+This series contains notes from the book "Generative Deep Learning" by David Foster.
+
+
+# All Posts
