--- a/posts/business/pitching/pitching.qmd
+++ b/posts/business/pitching/pitching.qmd
@@ -17,7 +17,8 @@ I don't agree with it, but summarising it here for the parts that are interestin
 Frames, AKA perspective AKA point of view, describe a person's mental model of controlling the world. 
 The person who owns the frame owns the conversation.
 
-Information must penetrate through the following layers of the brain in order. 
+Information must penetrate through the following layers of the brain in order.
+
 1. Survival - "crocodile brain". Ignore anything that isn't new, exciting, dangerous, unexpected. Needs big picture, high contrast points.
 2. Social
 3. Reason
@@ -26,6 +27,7 @@ Logic won't reach the "reason" part of the brain until the croc brain and social
 Data is perceived as a threat by layer 1. the croc brain needs unexpected information that is concrete not abstract.
 
 STRONG process:
+
 - Set the frame
 - Tell the story
 - Reveal the intrigue
@@ -40,6 +42,7 @@ When frames collide, the stronger frame absorbs the weaker frame.
 If you have to explain your authority, power, position, leverage then you have the weaker frame.
 
 Opposing frames and how to counter them.
+
 1. Power frame - fuelled by status and ego
    - Don't react to our strengthen their status
    - Acts of denial/defiance - establish your own rituals of power rather than abiding by theirs.
@@ -63,19 +66,23 @@ E.g. making you wait, big dogs not showing up to meetings, small talk before mee
 
 Situational status is the temporary shift of status based on the situation.
 Create local star power to increase your situational status.
+
 - Ignore power rituals, avoid beta traps, ignore their global status
 - Frame control - small, friendly acts of defiance
 - Local star power - shift conversation to a topic where you are the domain expert
 - Prize frame - position yourself as the reward, e.g. leave after a hard cut off time
 - Confirm your status - make them say you're the alpha
 
+```tex
 Shock -> frame control -> local star power -> hook point -> leave
+```
 
 
 ## 4. Pitching the big idea
 Every pitch should tell a story.
 
 Four sections of the pitch:
+
 1. Introduce yourself and the big idea (5 mins)
 2. Explain the budget and secret sauce (10 mins)
 3. Offer the deal (2 mins)
@@ -83,43 +90,52 @@ Four sections of the pitch:
 
 ### 4.1. Introduce yourself and the big idea (5 mins)
 Keep the pitch short - 20 mins.
+
 - Announce the time constraint at the start to appease the croc brain. 
   Otherwise people don't know how long they are trapped for and panic.
 - DNA presentation by Crick and Watson was 5 mins
 
 Intro should be highlights of successes NOT a life story.
+
 - The impression you leave is based the **average** not the sum, so don't dilute it.
 
 The "why now?" frame.
 3 market forces pattern:
+
 1. Economic
 2. Social
 3. Technology
 
 Tell the story of how your idea came to be.
+
 - Movement is key to overcoming change blindness. Don't just show 2 states, describe the transition between them.
 - Trends, impacts of those trends, how have these opened a (temporary) market window (time frame).
 - This story places you as the hero at the centre of solving this problem (prize frame).
 
 Idea introduction pattern:
-> For [target customers]
-> 
-> Who are dissatisfied with [current offerings in the market]
-> 
-> My idea/product is a [new idea or product category]
-> 
-> That provides [key problem/solution features]
-> 
-> Unlike [the competing product]
-> 
-> My idea/product is [describe key features]
+```tex
+For [target customers]
+
+Who are dissatisfied with [current offerings in the market]
+ 
+My idea/product is a [new idea or product category]
+ 
+That provides [key problem/solution features]
+ 
+Unlike [the competing product]
+ 
+My idea/product is [describe key features]
+```
+
 
 ### 4.2. Explain the budget and secret sauce (10 mins)
 Tune the message to the croc brain of the target.
+
 - Simplicity can come across as naive, but focus on describing concrete things like relationships between people.
   This is high-level enough that it will not engage cold cognitions or threaten the croc brain.
  
 Attention = Desire (anticipation of reward) + Tension (fear of loss, introduce consequences)
+
 - Attention is high when novelty is high.
 - Push/pull patterns to increase tension and desire
 - The pitch narrative is a series of tension loops.
@@ -127,6 +143,7 @@ Attention = Desire (anticipation of reward) + Tension (fear of loss, introduce c
 - Desire eventually becomes fear, so keep the pitch short.
 
 Must haves:
+
 - Numbers and projections 
   - This should demonstrate your skill at budgeting (a difficult, precise skill),
     not your skill at projecting (a simple, inaccurate skill).
@@ -139,6 +156,7 @@ Must haves:
 
 ### 4.3. Offer the deal (2 mins)
 Describe what they get if they do business with you
+
 - What you will deliver, when, and how.
 - What are their roles, responsibilities and next steps.
 
@@ -149,6 +167,7 @@ Don't wait for the target to evaluate you on the spot at the end of the pitch as
 Pile up the hot cognitions instead. 
 
 A hot cognition is emotional rather than analytical. 
+
 - You decide that you like something before you understand it.
 - Data is used to justify decisions after the fact.
 - Hot cognitions are generally unavoidable; you may be able to control the expression of emotion, but the initial experience is still there.
@@ -157,11 +176,13 @@ A hot cognition is emotional rather than analytical.
 - Hot cognitions are "knowing" something through feeling it, cold cognitions are "knowing something through evaluating it."
 
 Stacking frames.
+
 - We want to stack frames to create "wanting", an emotional response
 - This is not the same as getting the target to "like" us, as that is a slow, intellectual cold cognition.
 - Appealing to the analytical brain can only trigger a "like"; we want to trigger a "want" in the croc brain.
 
 The 4 frame stack of hot cognitions:
+
 1. The intrigue frame
    - A story where most important things are who it happened to and how the characters reacted to their situation.
    - The events don't need to be extreme but the characters' reactions should be.
@@ -180,11 +201,13 @@ Once the frame stacking is complete, you have the target's attention for about 3
 
 ## 6. Eradicating neediness
 Validation-seeking behaviour (i.e. neediness) is the number one deal killer.
+
 - Neediness is a threat signal, it triggers fear and uncertainty in the target which triggers self-protection.
 
 Avoid "soft closes" aiming to seek validation, e.g. "So what do you think so far?", "Do you still think this is a good deal?"
 
 Causes of neediness:
+
 - Anxiety and insecurity turn to fear, so you resort to acceptance-seeking behaviour to confirm that you're still "part of the pack"
 - Response to disappointment is to seek validation
 - We want something only the target can give us
@@ -192,13 +215,17 @@ Causes of neediness:
 - We believe the target can make us feel good by accepting our offer
 
 Counteracting validation-seeking behaviours:
+
 1. Want nothing
 2. Focus only on things you do well
 3. Announce your intention to leave - time frame. When you finish the pitch, withdraw and deny your audience; this creates a prize frame.
 
+```tex
 Mantra: "I don't need these people, they need me. I am the prize".
+```
 
 Example:
+
 1. Time frame - "The deal will be fully subscribed in the next 10 days".
 2. Power frame - "We don't need VC money but want a big name on cap sheet for later IPO"
 3. Prize frame - "Are you really the right investor for this? We need to know more about the relationships and value you can bring."
@@ -208,6 +235,7 @@ Example:
 You are not pushing, you are interacting with people using basic rules of social dynamics.
 
 Croc brain:
+
 - Boring: Ignore it
 - Dangerous? Fight it or run
 - Complicated? Radically summarise
@@ -215,6 +243,7 @@ Croc brain:
 The presenter's problem boils down to deciding which information to include. It is not like an engineering problem where more information is better.
 
 Three key insights:
+
 1. Appeal to the croc brain
 2. Control frames
 3. Use humour - this is not to relieve tension but to signal that you are so confident that you're able to play around a little
@@ -222,6 +251,7 @@ Three key insights:
 If the pitch stops being fun, you're doing it wrong.
 
 Steps to learning the method:
+
 1. Recognise beta traps; anything designed to control your behaviour
 2. Step around beta traps
 3. Identify social frames
