--- a/posts/business/public_speaking/public_speaking.qmd
+++ b/posts/business/public_speaking/public_speaking.qmd
@@ -34,7 +34,7 @@ Don't make any impossible leaps or unexpected changes of direction.
 - What are the key open questions? Controversies?
 
 
-## 3. Common traps
+### 3. Common traps
 Four talk styles to AVOID.
 
 1. Sales Pitch
@@ -52,8 +52,9 @@ Four talk styles to AVOID.
     - Inspiration is the response to authenticity, courage, wisdom, selflessness.
 
 
-## 4. The throughline
+### 4. The throughline
 The throughline is a connecting theme that ties the narrative elements
+
 - A focused, precise, unexpected idea
 - Not the same as a theme
 - You should be able to encapsulate it in <15 words
@@ -62,6 +63,7 @@ Trace the path the journey will take.
 If the audience knows where you're going, it will be easier to follow.
 
 Cut down the talk to keep the throughline focused.
+
 - DON'T just keep all the content but say it in less detail. Overstuffed = underexplained
 - Cut back the **range** of topics. Say less with more impact.
 - "The power of the deleted word".
@@ -69,6 +71,7 @@ Cut down the talk to keep the throughline focused.
 
 The overall structure can be thought of in 3 parts: What? So what? What now?
 In more detail, this is:
+
 1. Intro - what will be covered
 2. Context - why this issue matters
 3. Main concepts
@@ -78,6 +81,7 @@ Talk about ideas not issues.
 Write for an audience of one.
 
 Checklist:
+
 - Is this a topic I'm passionate about? Do I know enough to be worth the audience's time? Do I have credibility?
 - Does it inspire curiosity?
 - Will knowing this make a difference to the audience?
@@ -95,11 +99,13 @@ Knowledge has to be **pulled in**, not pushed in.
 Be AUTHENTIC.
 
 Dos
+
 - Eye contact.
 - Vulnerability, but authentic.
 - Humour signals to the group that you've all connected.
  
 Don'ts
+
 - Ego breeds contempt.
 - Avoid tribal topics/language, e.g. politics.
 
@@ -108,6 +114,7 @@ Don'ts
 Storytelling helps people to imagine and dream -> empathise -> care
 
 Key elements:
+
 1. Character
 2. Tension
 3. Right level of detail
@@ -121,6 +128,7 @@ Connect the dots enough, but don't force-feed the conclusion.
 
 ### 7. Explanation
 Steps:
+
 1. Start where the audience is. No assumed knowledge or jargon.
 2. Spark curiosity. Create a knowledge gap that the listener wants to fill.
 3. Introduce new concepts one-by-one. **Name** each concept.
@@ -141,7 +149,7 @@ An explanation is a small mental model in a large space of possibilities. Reduce
 Demolish the listener's existing knowledge and rebuild it; replace it with something better.
 Genius is something that comes to you, not something you are.
 
-An "intuition pump" is an example or metaphor that makes the conclusion more plausible. 
+An **"intuition pump"** is an example or metaphor that makes the conclusion more plausible. 
 Not a rigorous argument, but nudges the listener in the right direction.
 Prime with emotion or story, then persuade with reason.
 
@@ -170,7 +178,8 @@ Three approaches to revelatory talks:
 Slides can distract. If you do use them, make sure they add something.
 
 Visuals should:
-- Reveal - set contecxt, prime, BAM!
+
+- Reveal - set context, prime, BAM!
 - Explain - one idea per slide with a clickbait headline not a summary. Highlight the point you're making.
 - Delight - show impressive things and let them speak for themselves. Don't need to explain every image/slide.
 
@@ -182,10 +191,12 @@ The message loses its impact, it's not news anymore.
 The goal is to have a set structure that you speak naturally and authentically about.
 
 Both approaches have the same result:
+
 1. Script and memorise until natural, or
 2. Freestyle around bullet points and rehearse until structure is set
 
 Being read to and being talked to are very different experiences
+
 - Dictating the speech rather than writing it can help make sure it comes across how you would speak rather than how you would write.
 - Don't end up in the uncanny valley between reading and speaking
 - In some cases, reading is powerful if it's clear that this is a poetic, written piece. Abandon the script for an impactful finale.
@@ -198,7 +209,8 @@ Rehearse your impromptu remarks.
 ### 12. Run throughs
 Practice speaking by speaking!
 
-rehearse in phases:
+Rehearse in phases:
+
 1. Editing and cutting
 2. Pacing and timing
 3. Delivery
@@ -211,10 +223,12 @@ results in tighter writing, and time to riff and enjoy the reaction.
 You have the audience's attention at the start, then it's yours to lose.
 Opener has to capture attention and keep it.
 2 stages:
+
 1. 10 seconds to capture attention
 2. 1 minute to hold it
 
 Opening techniques:
+
 1. Drama
 2. Curiosity - more specific questions are more intriguing
 3. Compelling slide/image - "the next image changed my life"
@@ -224,6 +238,7 @@ Opening techniques:
 The closer dictates how the whole talk will be remembered.
 
 Closing techniques:
+
 1. Camera pullback - big picture and implications
 2. Call to action
 3. Personal commitment
@@ -235,12 +250,14 @@ Closing techniques:
 
 ## On stage
 ### 14. Wardrobe
+
 - Choose an outfit early
 - Dress like the audience but smarter
 - Dress for the people in the back row
 
 
 ### 15. Mental prep
+
 - Embrace the nerves and draw attention to it. Vulnerability humanises you.
 - Pick friendly faces in the audience and speak to them.
 - Backup plan - have a story ready to fill in during unexpected technical issues
@@ -262,6 +279,7 @@ Speaking style adds another stream of input parallel to the words themselves.
 It tells the listener how they should interpret the words.
 
 Six voice tools. Vary each of them depending on the meaning and emotion.
+
 1. Volume
 2. Pitch
 3. Pace
@@ -270,6 +288,7 @@ Six voice tools. Vary each of them depending on the meaning and emotion.
 6. Prosody (singsong rise and fall)
 
 Speed should be a conversational pace, approx 130-170 words per minute.
+
 - People often worry about speaking too fast
 - Speaking too slow is a more common problem (overcorrection?)
 - Understanding outpaces articulation, the listener is "dying of word starvation"
@@ -277,6 +296,7 @@ Speed should be a conversational pace, approx 130-170 words per minute.
 Speak, don't orate.
 
 Body language
+
 - Stand and move intentionally.
 - Stop to make a point then walk to the next point.
 
@@ -293,6 +313,7 @@ Understanding how everything fits together is becoming broader, more unified.
 
 Concepts of specialised knowledge are outdated, stemming from industrial age thinknig.
 Modern thinking values:
+
 1. Contextual knowledge
 2. Creating knowledge
 3. Understanding of humanity
