--- a/posts/business/marketing/marketing.qmd
+++ b/posts/business/marketing/marketing.qmd
@@ -20,6 +20,7 @@ The overall phases of the direct response marketing strategy are:
 | After  | Customer | Get them to trust you |
 
 Direct response marketing should be:
+
 - Specific
 - Trackable
 - Include an offer
@@ -36,6 +37,7 @@ A marketing plan encompasses:
 | Sales       | People come to the circus and spend money                   |
 
 Strategy changes with scale
+
 - Don't blindly copy large companies. "Branding" to "get your name out there"
   is expensive and ineffective.
 - The one and only objective of marketing for a small company is "make a profit"
@@ -45,6 +47,7 @@ Strategy changes with scale
 - Tactics without strategy = bright shiny object syndrome
 
 Product quality is a customer **retention** tool, not a customer **acquisition** tool.
+
 - People don't know how good the product is until they've already bought it
 - "If you build it, they will come" doesn't work
 
@@ -58,22 +61,26 @@ Spend money to make time, not vice versa. Money is a renewable resource, time is
 
 ### 1. Selecting your target market
 The niche should be as specific as possible - an inch wide and a mile deep.
+
 - Too broad a target market is useless as the message gets diluted
 - Mass marketing/branding can work for larger companies but not small.
   Large companies have enough firepower to fire arrows in all directions.
   Small companies need to fire in a specific direction.
 
 Become a specialist in your field to make price irrelevant
+
 - Become an educator and build trust
 - You don't want to be a commodity shopped on price. A customer won on price will be lost on price.
 
 Use the PVP index to identify the ideal niche.
 Assign values to each possible segment for:
+
 - Personal fulfillment
 - Value to the marketplace
 - Profitability
 
 Questions for the target prospect:
+
 - What keeps them up at night?
 - What are they afraid of? 
 - What are they angry about? Who are they angry at?
@@ -93,6 +100,7 @@ Answer each of the questions above from their POV.
 
 ### 2. Crafting your message
 There are two key elements of the message:
+
 1. Purpose of the ad
 2. What it focuses on
 
@@ -101,10 +109,12 @@ Keep the message focused: 1 ad = 1 objective.
 There should be a clear call to action. You should know the exact action you want the prospect to take next.
 
 The following two questions help refine the USP:
+
 1. Why should they buy?
 2. Why should they buy from me?
 
 Key takeaways for USP:
+
 - Why should they buy from you rather than competitor
 - If you remove the company name and logo, would people still know it's you?
 - Quality and service are **not** USPs. The customer only finds these out after they buy from you.
@@ -118,16 +128,19 @@ Purchasing is done with emotions and justified with logic after the fact.
 "If I had asked people what they wanted, they'd have said faster horses" - Henry Ford.
 
 When you confuse them, you lose them.
+
 - Explain the product and its benefit in one sentence.
 - The biggest threat isn't that someone buys from a competitor, it's that they do nothing.
 - Elevator pitch of the form:
   "You know <problem>? What we do is <solution>? In fact <proof>."
 
 Be remarkable
+
 - Transform something ordinary into something that makes the customer smile.
 - Unique is dangerous, you just need to be "different enough".
 
 Craft the offer
+
 - If you don't give a compelling reason to buy, customers will default to price, and you become a commodity.
 - Don't just offer a discount, think about which product will definitely solve their biggest problem.
 - Add value rather than discounting, through bundles and customisation.
@@ -135,6 +148,7 @@ Craft the offer
 - Target pain points. Sell the problem, not a feature list. Customers in pain are price insensitive.
 
 Create the offer:
+
 - Value to customer
 - Language and jargon they use
 - Reason why this offer is here. People are skeptical if it is too good to be true.
@@ -144,19 +158,22 @@ Create the offer:
 - Create scarcity. People react more to fear of loss than prospect of gain.
 
 Writing copy:
+
 - Be yourself and be authentic. "Professional" = boring.
 - "The enemy in common". People buy with emotions: fear, love, greed, guilt, pride.
 - Copy should address the bad parts of the product, not just the good. Who is this not for?
 
 Naming:
+
 - Title=content
 - Choose clarity over cleverness
 
 
 ### 3. Reaching prospects with advertising media
-"Half the money I spend on advertising is wasted; the trouble is I don't know which half" - John Wanamaker
+> "Half the money I spend on advertising is wasted; the trouble is I don't know which half" - John Wanamaker
 
 Measure ROI of ad campaign
+
 - If it made more money that it lost, it was a success. The only metric that matters.
 - Customer acquisition cost vs lifetime value of customer
 - Other metrics like response rate are only useful to the extent that they help you calculate the above.
@@ -164,10 +181,12 @@ Measure ROI of ad campaign
 - What gets measured gets managed. Conversely, what you don't know will hurt you.
 
 Lifetime value of customer = Frontend (initial purchase) + Backend (subsequent purchases)
+
 - Ideally the frontend alone exceeds the customer acquisition cost to be sustainable.
   Then the cost of the ad is immediately recouped and the ad campaign can be reupped for another cycle.
 
 Successful marketing has three components:
+
 1. Market 
 2. Message 
 3. Media
@@ -177,17 +196,20 @@ It's only _free_ if your time is worthless.
 
 Email is preferable to social media because you own the mailing list.
 The customer database which is a valuable asset in its own right.
+
 - Email regularly - weekly at least
 - Give value - 3 value-building emails for each offer email
 - Snail mail complements email - less cluttered and less competitive because fewer people still use it.
 
 Marketing budget
+
 - The only time for a budget is during the testing phase when your finding what works (what delivers a positive ROI)
 - Once you have a campaign that works, go all in. It makes money, it's not an expense so don't limit it.
 - If you could buy £10 notes for £5 you'd buy as many as possible, you wouldn't limit it with a budget.
   The same applies for a marketing campaign with a £5 cost of acquisition and £10 lifetime value of customer.
 
 Avoid single points of failure
+
 - One customer, supplier, ad medium, lead generation method.
 - Paid media is reliable and allows ROI to be tracked and measured.
 
@@ -197,11 +219,13 @@ Treat marketing like farming not hunting. Avoid "random acts of marketing" that 
 Build a CRM system and infrastructure for new leads, follow-ups, conversions, etc.
 
 The first goal is to generate leads - find people who are interested.
+
 - Avoid trying to sell from the ad immediately
 - Capture all who could be interested, not just those ready to buy immediately
 - Build a customer database, then sell to them later
 
 The market for your product might break down something like:
+
 - 3% - ready to buy now
 - 7% - open to buying
 - 30% - interested but not right now
@@ -218,10 +242,12 @@ The process of taking people from being vaguely interested to desiring it.
 The nurturing process means they should be predisposed to buying from you before you ever try to sell to them.
 
 Stay in contact. 
+
 - Most stop after 1 or 2 follow-ups. The most effective salespeople do 10+ follow-ups.
 - The money is in the follow-up
 
 Build trust and add value. Don't pester to close.
+
 - When the customer is ready to buy, you will be top of mind and they are predisposed to buy.
   It should be when they are ready to buy, not when you are ready to sell.
 - Do not pressure prospects to close. Don't be a pest, be a welcome guest.
@@ -229,6 +255,7 @@ Build trust and add value. Don't pester to close.
 - Most contact should be value add, with occasional pitch/offer emails. 3:1 ratio of value add:pitch.
 
 Shock and awe package.
+
 - Physical parcel mailed to high probability prospects.
 - "Lumpy" mail grabs attention - snail mail with something physical inside.
 - Need numbers on conversion probabilities and lifetime value of customer for this approach to be viable. 
@@ -250,11 +277,13 @@ Three major types of people:
 | Manager      | "Make it recur" | Daily BAU      |
 
 Marketing calendar.
+
 - What needs to be done and when
 - Daily, weekly, monthly, quarterly, annually
 - Event-triggers tasks, e.g. on signup, on complaint
 
 Delegate.
+
 - If someone else can do the job 80% as good as you, delegate it.
 - Separate majors and minors. Focus on the majors, dump or delegate the minors. 
 - Don't mistake movement for achievement.
@@ -266,6 +295,7 @@ Once you reach a certain level of expertise, the real profit is in how you marke
 A concert violinist makes more money performing concerts than busking.
 
 Trust is key in sales.
+
 - Difficult for unknown businesses.
 - People are wary because of dodgy sellers. Assume every dog bites.
 - Educate -> Position as expert -> Trust
@@ -276,12 +306,14 @@ Trust is key in sales.
 - Entrepreneur is someone who solves people's problems for profit.
 
 Outrageous guarantees.
+
 - Reverse the risk from the customer to you.
 - Guarantee needs to be **specific** and address the prospect's reservations directly.
   Not just a generic money-back guarantee.
 - If you're an ethical operator, you're already implicitly providing a guarantee, just not marketing it. Use it!
 
 Pricing.
+
 - The marketing potential of price is often underutilised.
 - Don't just naively undercut the market leader or use cost-plus pricing.
 - Small number of options/tiers
@@ -295,6 +327,7 @@ Pricing.
   - 10% of customers would pay 10x more. 1% of customers would pay 100x more.
 
 Other price considerations:
+
 - Don't discount, unless specifically using a loss-leader strategy.
 - Try before you buy (the puppy dog close)
   - The sale feels less permanent so more palatable for the customer.
@@ -310,12 +343,14 @@ Most companies stop marketing at the sell, but this is where the process begins.
 Most of the money is in the backend not the frontend.
 
 Sell them what they **want**, give them what they **need**.
+
 - These don't always overlap
 - If they buy a treadmill and don't use it, they'll blame you when they don't lose weight.
   You need to make sure they use your product correctly after they buy it.
 - Split the process up for them to make it less daunting.
 
 Create a sense of theatre
+
 - People don't just want ot be serviced, they want to be entertained.
 - Innovate on: pricing, financing, packaging, support, delivery etc, not just product.
   For example, "will it blend" YouTube videos to sell ordinary blenders.
@@ -324,11 +359,13 @@ Use technology to reduce friction.
 Treat tech like an employee. Why am I hiring it? What are its KPIs?
 
 Become a voice of value to your tribe.
+
 - Education-based marketing leads to trust and becoming an expert in the field.
 - Tell your audience the effort that goes into the product. 
   For example, shampoo bottle that says how many mint leaves went into it.
 
 Create replicable systems
+
 - Systems ensure you **have** a business, rather than you **are** the business
 - Often overlooked because it is "back office" or "not urgent"
 - Benefits: build valuable asset; leverage and scalability; consistency; lower labour costs
@@ -377,29 +414,34 @@ Increase revenue by selling more to existing customers.
   - Apologise and make corrections if necessary. Make the feel special if they do return.
 
 Key numbers - what gets measured gets managed
+
 1. Leads
 2. Conversion rate
 3. Average transaction value
 4. Break even point
 
 For subscription models measure:
+
 1. Monthly recurring revenue
 2. Churn rate
 3. Customer lifetime value
 
 Polluted revenue - dollars from toxic customers != dollars from raving fans.
 Types of customers:
+
 1. Tribe
 2. Churners - can't afford you so drop you on price or intro offer ending
 3. Vampires - suck up all your time, you can't afford them
 4. Snow leopard - big customer but not replicable
 
 Net promoter score
+
 - "How likely are you to recommend us to a friend?"
 - Detractors 0-6; Passive 7-8; Promoters 9-10
 - NPS=+100 if everyone is a promoter, -100 if everyone is a detractor
 
 Fire problem customers
+
 - "The customer is always right" is naive. It should be "the right customer is always right".
 - Genuine customer complaints are valuable and may help retain other customers who had the same issue but didn't speak up.
 - Low-value, price-sensitive customers complain the most. They take up your time and energy at the expense of your tribe.
@@ -408,12 +450,14 @@ Fire problem customers
 
 
 ### 9. Orchestrating and stimulating referrals
-Orchestrating referrals is an active task, not needy or desperate,
+Orchestrating referrals is an active task, not needy or desperate.
+
 - Don't just deliver a good product and hope for the best
 - People refer because it makes **them** feel good, helpful or knowledgeable, not to do you a favour.
 - Appeal to their ego, offer them something valuable, give them a reason to refer.
 
 Ask (for a referral) and ye shall receive.
+
 - "Law of 250" - most people know 250 people well enough to invite to a wedding or funeral. This is 250 potential referrals per customer.
 - Set expectation of referrals **beforehand** - "We're going to do a great job and we need your help... Most people refer 3 others."
 
@@ -421,18 +465,21 @@ Be specific about **who** you ask and **what** kind of referral you want.
 Conquer the bystander effect.
 
 Make referral profiles for each customer group in your database.
+
 - Who do they know?
 - How can you make them remember you? 
 - What will make them look good?
 - How will they provide value to their referral target
 
 Customer buying behaviour
+
 - Who has your customers before you?
 - Joint venture for referrals
 - Sell/exchange leads, resell complementary products, affiliate referral partner
 
 Brand = personality of the business. 
 Think of the business as a person:
+
 - Name
 - Design (what they wear)
 - Positioning (how they communicate)
@@ -441,12 +488,14 @@ Think of the business as a person:
 - Brand awareness (how well known / popular)
 
 Best form of brand building is selling
+
 - Branding is what you do after someone has bought from you.
 - Brand equity - customers crossing the road to buy from you and walk past competitors.
 
 
-### 10. Conclusion
+## Conclusion
 Implementation is crucial
+
 - Knowing and not doing is the same as not knowing.
 - Common pitfalls:
   1. Paralysis by analysis - 80% out the door is better than 100% in the drawer; money loves speed.
@@ -454,12 +503,14 @@ Implementation is crucial
   3. "My business is different" - Spend your effort figuring out how to make it work rather than why it won't work.
 
 Time is not money
+
 - Entrepreneurs get paid for the value they create, not the time or effort they put in.
 - Making money is a side effect of creating value.
 
 The value of a business is the eyeballs it has access to.
 
 Questions to ponder:
+
 - What business should I be in?
 - What technologies will disrupt it?
 - How can I take advantage of tech rather than fight it?
