--- a/projects.qmd
+++ b/projects.qmd
@@ -1,19 +1,16 @@
 ---
 title: "Projects"
-image: profile.jpg
-about:
-  template: jolla
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
-    - icon: github
-      text: Github
-      href: https://github.com
-
+listing:
+  contents: projects_section
+  sort: "date desc"
+  type: grid  # default, table, grid
+  categories: true
+  fields: [title, description, categories, image]
+  # sort-ui: true
+  # filter-ui: true
+  # feed: true
+page-layout: full
+title-block-banner: true
 ---
 
-Projects
+# Projects
