--- a/projects_section/fastai/collaborative_filtering/7_collaborative_filtering.ipynb
+++ b/projects_section/fastai/collaborative_filtering/7_collaborative_filtering.ipynb
@@ -16,7 +16,7 @@
     "        code-fold: true\n",
     "jupyter: python3\n",
     "toc: true\n",
-    "# draft: true\n",
+    "draft: true\n",
     "---"
    ]
   },
